--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@
 :root{
     /*Site Colors*/
      --light-black:#373737;
+     --light-black-opacity:rgba(55, 55, 55,0.7);
      --text-color: #7D7D7D;
      --accent-color:#717CFF;
-     --header-bg-color: #F2F2F2;
-     --section-bg-color:#FAFAFA;
+     --section-bg-color: #F2F2F2;
+     --header-bg-color:#FAFAFA;
      --darker-grey:#37474F;
      --dark-grey:#252525;
      --light-grey:#565656;
@@ -185,9 +186,74 @@ body{
 }
 .hero-section__links img{
     display: block;
+}
+.hero-link{
     margin-right: 30px;
 }
 .hero-section__links{
     display: flex;
     align-items: center;
+}
+
+/* UNIVERSITIES */
+
+.universities-section{
+    padding: 55px 0;
+    background-color: var(--section-bg-color);
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+.universities__container{
+    margin:0 148px;
+    position: relative;
+}
+.university-title{
+    margin: 0;
+    margin-bottom: 94px;
+    font-weight: 500;
+    text-align: center;
+    font-size: 23px;
+    line-height: 27px;
+    letter-spacing: 2.1px;
+    text-transform: uppercase;
+    color:var(--light-black-opacity) ;
+}
+
+.universities-brands{
+    display: flex;
+    align-items: center;
+}
+.university__link img{
+    display: block;
+}
+.university__link:not(:last-child) img{
+    margin-right: 74px;
+}
+.corusel-list{
+    width: 105px;
+    padding: 0;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 112px;
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+}
+.corusel-btn{
+    border: none;
+    margin-right: 21px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color:rgba(124, 124, 124, 0.318837);
+}
+.corusel-btn__active{
+    border: none;
+    margin-right: 21px;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background-color:var(--accent-color);
 }
