--- a/css/style.css
+++ b/css/style.css
@@ -200,9 +200,7 @@ body{
 .universities-section{
     padding: 55px 0;
     background-color: var(--section-bg-color);
-    display: flex;
-    align-items: center;
-    overflow: hidden;
+ 
 }
 .universities__container{
     position: relative;
@@ -229,30 +227,156 @@ body{
 .university__link:not(:last-child) img{
     margin-right: 74px;
 }
-.corusel-list{
-    width: 105px;
+
+
+  .slider {
+    position: relative;
+    width: 1260px;
+    height: 200px;
+    margin: 50px auto;
+    overflow: hidden;
+  }
+  
+  .slider-controls {
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    width: 200px;
+   
+    text-align: center;
+    transform: translatex(-50%);
+    z-index: 1000;
+    list-style: none;
+    text-align: center;
+  }
+  
+  .slider input[type="radio"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider-controls label {
+    display: inline-block;
+    border: none;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: rgba(124, 124, 124, 0.318837);
+    transition: background-color 0.2s linear;
+  }
+  .slider-controls label:not(:last-child){
+    margin-right: 30px;
+  }
+  
+  #btn-1:checked ~ .slider-controls label[for="btn-1"] {
+    background-color: var(--accent-color);
+  }
+  
+  #btn-2:checked ~ .slider-controls label[for="btn-2"] {
+    background-color: var(--accent-color);
+  }
+  
+  #btn-3:checked ~ .slider-controls label[for="btn-3"] {
+    background-color: var(--accent-color);
+  }
+  #btn-4:checked ~ .slider-controls label[for="btn-3"] {
+    background-color: var(--accent-color);
+  }
+  
+  /* SLIDES */
+  
+  .slides {
+    list-style: none;
     padding: 0;
     margin: 0;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 112px;
-    list-style-type: none;
+    height: 100%;
+  }
+  
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+  
     display: flex;
-    align-items: center;
-}
-.corusel-btn{
-    border: none;
-    margin-right: 21px;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color:rgba(124, 124, 124, 0.318837);
-}
-.corusel-btn__active{
-    border: none;
-    margin-right: 21px;
-    width: 18px;
-    height: 18px;
-    border-radius: 50%;
-    background-color:var(--accent-color);
-}
+    justify-content: space-between;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+  
+    opacity: 0;
+    transform: translatex(-100%);
+    transition: transform 250ms linear;
+  }
+  
+  .slide-image img {
+    max-width: 100%;
+  }
+  
+  /* Slide animations */
+  #btn-1:checked ~ .slides .slide:nth-child(1) {
+    transform: translatex(0);
+    opacity: 1;
+  }
+  
+  #btn-2:checked ~ .slides .slide:nth-child(2) {
+    transform: translatex(0);
+    opacity: 1;
+  }
+  
+  #btn-3:checked ~ .slides .slide:nth-child(3) {
+    transform: translatex(0);
+    opacity: 1;
+  }
+  #btn-4:checked ~ .slides .slide:nth-child(3) {
+    transform: translatex(0);
+    opacity: 1;
+  }
+  
+  #btn-1:not(:checked) ~ .slides .slide:nth-child(1) {
+    animation-name: swap-out;
+    animation-duration: 300ms;
+    animation-timing-function: linear;
+  }
+  
+  #btn-2:not(:checked) ~ .slides .slide:nth-child(2) {
+    animation-name: swap-out;
+    animation-duration: 300ms;
+    animation-timing-function: linear;
+  }
+  
+  #btn-3:not(:checked) ~ .slides .slide:nth-child(3) {
+    animation-name: swap-out;
+    animation-duration: 300ms;
+    animation-timing-function: linear;
+  }
+  #btn-4:not(:checked) ~ .slides .slide:nth-child(3) {
+    animation-name: swap-out;
+    animation-duration: 300ms;
+    animation-timing-function: linear;
+  }
+  .slide img{
+      display: block;
+  }
+  
+  @keyframes swap-out {
+    0% {
+      transform: translatex(0);
+      opacity: 1;
+    }
+  
+    50% {
+      transform: translatex(50%);
+      opacity: 0;
+    }
+  
+    100% {
+      transform: translatex(100%);
+    }
+  }
+  
