--- a/css/style.css
+++ b/css/style.css
@@ -239,10 +239,9 @@ body{
   
   .slider-controls {
     position: absolute;
-    bottom: -40px;
+    bottom: -13px;
     left: 50%;
     width: 200px;
-   
     text-align: center;
     transform: translatex(-50%);
     z-index: 1000;
@@ -267,26 +266,26 @@ body{
     width: 20px;
     border-radius: 50%;
     cursor: pointer;
-    background-color: rgba(124, 124, 124, 0.318837);
+    background-color: rgba(124, 124, 124, 0.3);
     transition: background-color 0.2s linear;
   }
   .slider-controls label:not(:last-child){
     margin-right: 30px;
   }
-  
+
   #btn-1:checked ~ .slider-controls label[for="btn-1"] {
-    background-color: var(--accent-color);
+    background-color:#717CFF;
   }
   
   #btn-2:checked ~ .slider-controls label[for="btn-2"] {
-    background-color: var(--accent-color);
+    background-color:#717CFF;
   }
   
   #btn-3:checked ~ .slider-controls label[for="btn-3"] {
-    background-color: var(--accent-color);
+    background-color:#717CFF;
   }
-  #btn-4:checked ~ .slider-controls label[for="btn-3"] {
-    background-color: var(--accent-color);
+  #btn-4:checked ~ .slider-controls label[for="btn-4"] {
+    background-color:#717CFF;
   }
   
   /* SLIDES */
@@ -302,13 +301,11 @@ body{
     position: absolute;
     top: 0;
     left: 0;
-  
     display: flex;
     justify-content: space-between;
     padding: 20px;
     width: 100%;
     height: 100%;
-  
     opacity: 0;
     transform: translatex(-100%);
     transition: transform 250ms linear;
@@ -379,4 +376,14 @@ body{
       transform: translatex(100%);
     }
   }
+  
+
+
+
+
+
+
+
+
+
   
