add events section

--- a/css/style.css
+++ b/css/style.css
@@ -602,3 +602,94 @@ body{
   margin-right: auto;
   margin-left: auto;
 }
+
+/* EVENTS */
+.events{
+    background-color: #fff;
+    padding-top: 98px;
+    padding-bottom: 110px;
+}
+.events-cards{
+    max-width: 1127px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+}
+
+.event-card{
+    padding: 30px;
+    width: 540px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 77px rgba(0, 0, 0, 0.06);
+    border-radius: 15px;
+}
+.event-card:not(:last-child){
+    margin-right: 47px;
+}
+
+.link-box{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.event-card__title{
+    margin: 0;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 37px;
+    color: var(--darker-grey);
+}
+.event-card__text{
+    margin: 0;
+    margin-bottom: 26px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 28px;
+    letter-spacing: 0.444444px;
+}
+.title-box{
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 28px;
+}
+.calendar{
+    margin: 0;
+    margin-right: 19px;
+    width: 76px;
+    height: 76px;
+    font-weight: bold;
+    font-size: 27px;
+    line-height: 32px;
+    border-radius: 11px;
+    color: var(--accent-color);
+    padding: 10px;
+    background-color: #abb0e4;
+    text-align: center;
+}
+.calendar-month{
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 21px;
+    color: var(--accent-color);
+    text-align: center
+}
+.time-text{
+    font-weight: 900;
+    font-size: 16px;
+    line-height: 28px;
+    color: var(--light-black);
+    text-align: right;
+    letter-spacing: 0.444444px;
+    display: flex;
+    align-items: center;
+}
+.time-text::before{
+    content: "";
+    width: 27px;
+    height: 27px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+    background-image: url("../images/time.svg");
+}
