--- a/css/style.css
+++ b/css/style.css
@@ -621,7 +621,7 @@ body{
     padding: 30px;
     width: 540px;
     background: #FFFFFF;
-    box-shadow: 0px 0px 77px rgba(0, 0, 0, 0.06);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.06);
     border-radius: 15px;
 }
 .slick-slide {
