--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,15 @@ body{
     margin-right: auto;
     margin-left: auto;
 }
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
 /* HEADER */
 .site-header{
     padding-top: 40px;
@@ -199,7 +208,7 @@ body{
 /* UNIVERSITIES */
 
 .universities-section{
-    padding: 55px 0;
+    padding: 55px 0 175px;
     background-color: var(--section-bg-color);
  
 }
@@ -230,154 +239,72 @@ body{
 }
 
 
-  .slider {
-    position: relative;
-    width: 1260px;
-    height: 200px;
-    margin: 50px auto;
-    overflow: hidden;
-  }
-  
-  .slider-controls {
-    position: absolute;
-    bottom: -13px;
-    left: 50%;
-    width: 200px;
-    text-align: center;
-    transform: translatex(-50%);
-    z-index: 1000;
-    list-style: none;
-    text-align: center;
-  }
-  
-  .slider input[type="radio"] {
-    position: absolute;
-    top: 0;
-    left: 0;
-    
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider-controls label {
-    display: inline-block;
-    border: none;
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    cursor: pointer;
-    background-color: rgba(124, 124, 124, 0.3);
-    transition: background-color 0.2s linear;
-  }
-  .slider-controls label:not(:last-child){
-    margin-right: 30px;
-  }
+ .slider{
+   max-width: 1200px;
+   margin: 0 auto;
+ }
 
-  #btn-1:checked ~ .slider-controls label[for="btn-1"] {
-    background-color:#717CFF;
-  }
-  
-  #btn-2:checked ~ .slider-controls label[for="btn-2"] {
-    background-color:#717CFF;
-  }
-  
-  #btn-3:checked ~ .slider-controls label[for="btn-3"] {
-    background-color:#717CFF;
-  }
-  #btn-4:checked ~ .slider-controls label[for="btn-4"] {
-    background-color:#717CFF;
-  }
-  
-  /* SLIDES */
-  
-  .slides {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    height: 100%;
-  }
-  
-  .slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transform: translatex(-100%);
-    transition: transform 250ms linear;
-  }
-  
-  .slide-image img {
-    max-width: 100%;
-  }
-  
-  /* Slide animations */
-  #btn-1:checked ~ .slides .slide:nth-child(1) {
-    transform: translatex(0);
-    opacity: 1;
-  }
-  
-  #btn-2:checked ~ .slides .slide:nth-child(2) {
-    transform: translatex(0);
-    opacity: 1;
-  }
-  
-  #btn-3:checked ~ .slides .slide:nth-child(3) {
-    transform: translatex(0);
-    opacity: 1;
-  }
-  #btn-4:checked ~ .slides .slide:nth-child(3) {
-    transform: translatex(0);
-    opacity: 1;
-  }
-  
-  #btn-1:not(:checked) ~ .slides .slide:nth-child(1) {
-    animation-name: swap-out;
-    animation-duration: 300ms;
-    animation-timing-function: linear;
-  }
-  
-  #btn-2:not(:checked) ~ .slides .slide:nth-child(2) {
-    animation-name: swap-out;
-    animation-duration: 300ms;
-    animation-timing-function: linear;
-  }
-  
-  #btn-3:not(:checked) ~ .slides .slide:nth-child(3) {
-    animation-name: swap-out;
-    animation-duration: 300ms;
-    animation-timing-function: linear;
-  }
-  #btn-4:not(:checked) ~ .slides .slide:nth-child(3) {
-    animation-name: swap-out;
-    animation-duration: 300ms;
-    animation-timing-function: linear;
-  }
-  .slide img{
-      display: block;
-  }
-  
-  @keyframes swap-out {
-    0% {
-      transform: translatex(0);
-      opacity: 1;
-    }
-  
-    50% {
-      transform: translatex(50%);
-      opacity: 0;
-    }
-  
-    100% {
-      transform: translatex(100%);
-    }
-  }
-  
+ .slides{
+   padding: 0;
+   margin: 0;
+   list-style-type: none;
+   display: flex;
+   overflow: hidden;
+ }
+ .slide{
+  display: none;
+   flex-shrink: 0;
+   width: 100%;
+
+ }
+ .slide-image{
+   text-decoration: none;
+ }
+ .slide-image img{
+   vertical-align: middle;
+ }
+ .slide-image:not(:last-child){
+  margin-right: 70px;
+}
+
+ #btn-1:checked ~ .slides .slide:nth-child(1),
+ #btn-2:checked ~ .slides .slide:nth-child(2),
+ #btn-3:checked ~ .slides .slide:nth-child(3),
+ #btn-4:checked ~ .slides .slide:nth-child(4){
+   display: block;
+   transition: ease 0.3s;
+ }
+
+ .slider-controls{
+   position: absolute;
+   left: 50%;
+   transform: translateX(-50%);
+   bottom: -100px;
+  display: flex;
+ }
+.slider-controls label{
+  cursor: pointer;
+  font-size: 0;
+  width: 14px;
+  height: 14px;
+  margin: 0 21px;
+  background: rgba(124, 124, 124, 0.318837);
+  border-radius: 50%;
+}
+
+.slider-controls label:hover{
+   background-color:var(--darker-grey);
+}
+#btn-1:checked ~ .slider-controls label:nth-child(1),
+#btn-2:checked ~ .slider-controls label:nth-child(2),
+#btn-3:checked ~ .slider-controls label:nth-child(3),
+#btn-4:checked ~ .slider-controls label:nth-child(4){
+  background-color: var(--accent-color);
+  transition: ease 0.3s;
+}
+
+
+
   /* SERVICES */
 .services{
     padding: 122px 0 70px;
@@ -608,7 +535,9 @@ body{
     background-color: #fff;
     padding-top: 98px;
     padding-bottom: 110px;
+    position: relative;
 }
+
 .events-cards{
     max-width: 1127px;
     margin-right: auto;
@@ -886,3 +815,8 @@ body{
     font-size: 18px;
     line-height: 32px;
   }
+
+
+
+  /* RESPONSIVE */
+
