--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ body{
     line-height: 38px;
     background-color: var(--header-bg-color);
     color: var(--text-color);
+    overflow-x: hidden;
 }
 .container{
     max-width: 1254px;
@@ -111,6 +112,7 @@ body{
 .sitenav-item:not(:first-child){
     margin-left:73px;
 }
+
 .sitenav-item{
     line-height: 20px;
     font-weight: 500;
@@ -121,8 +123,12 @@ body{
     padding: 11px 35px;
     border: 2px solid var(--accent-color);
     border-radius: 11px;
+    transition: all .2s ease-in;
 }
-
+.sitenav-link__bordered:hover{
+  background-color: var(--accent-color);
+  color: #fff;
+}
 
 /* LOGO */
 .logo-img{
@@ -130,6 +136,7 @@ body{
 }
 .logo-link{
     margin-right:auto;
+    padding-right: 20px;
 }
 
 /* MAIN */
@@ -180,6 +187,15 @@ body{
     line-height: 40px;
     display: flex;
     align-items: center;
+    transition: all .2s ease-in;
+}
+.btn:hover{
+  box-shadow:inset 0 0 0 1px var(--accent-color);
+  background-color: #fff;
+  color:var(--accent-color);
+}
+.btn:hover::after{
+  transform: translateX(5px);
 }
 .hero-section__btn{
     width: 262px;
@@ -188,6 +204,7 @@ body{
 .btn::after{
     content: "";
     width: 18px;
+    transition: all .2s ease-in;
     margin-left: 35px;
     height: 16px;
     background-repeat: no-repeat;
@@ -347,6 +364,9 @@ body{
     box-shadow: 0px 0px 77px rgba(0, 0, 0, 0.06);
     border-radius: 15px;
 }
+.card:hover{
+  box-shadow: 0px 0px 77px 22px rgba(0, 0, 0, 0.06);
+}
 .card-item:not(:nth-child(3)){
     margin-right: 47px;
 }
@@ -421,6 +441,7 @@ body{
     text-decoration: none;
     display: flex;
     align-items: center;
+    
 }
 .card-link::after{
     content: "";
@@ -430,6 +451,10 @@ body{
     background-image: url("../images/arrow-right.svg");
     background-size: contain;
     margin-left: 20px;
+    transition: ease 0.4s;
+}
+.card-link:hover::after{
+   transform: translateX(5px);
 }
 
 /* NEWS_SECTION */
@@ -562,6 +587,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    white-space: nowrap;
 }
 .event-card__title{
     margin: 0;
@@ -805,6 +831,10 @@ body{
     line-height: 49px;
     color: #EEEEEE;
     text-decoration: none;
+    transition: ease 0.3s;
+  }
+  .site-footer__link:hover{
+    color: var(--dark-black);
   }
  .footer-links{
    margin-top: 130px;
@@ -816,7 +846,232 @@ body{
     line-height: 32px;
   }
 
+  .menu-btn{
+    
+     display: flex;
+     position: relative;
+     justify-content: center;
+     align-items: center;
+     width: 80px;
+     height: 80px;
+     cursor: pointer;
+     transition: all .5s ease;
+     display: none;
+    }
+    .menu-btn__burger{
+      width: 50px;
+      height: 5px;
+      background-color: rgb(175, 50, 50);
+      border-radius: 5px;
+      box-shadow: 0 2px  5px rgba(255, 101, 47, 0.2);
+      transition: all .5s ease;
+    }
+    .menu-btn__burger::after,
+    .menu-btn__burger::before{
+      content: "";
+      width: 50px;
+      height: 5px;
+      position: absolute;
+      background-color: rgb(175, 50, 50);
+      border-radius: 5px;
+      box-shadow: 0 2px  5px rgba(255, 101, 47, 0.2);
+      transition: all .5s ease;
+    }
+    .menu-btn__burger::before{
+      transform: translateY(16px);
+    }
+    .menu-btn__burger::after{
+      transform: translateY(-16px);
+    }
+    .menu-btn.open .menu-btn__burger{
+      transform: translateY(-50px);
+      background-color: transparent;
+      box-shadow: none;
 
-
+    }
+   .menu-btn.open .menu-btn__burger::before{
+     transform: rotate(45deg) translate(38px,38px);
+   }
+   .menu-btn.open .menu-btn__burger::after{
+    transform: rotate(-45deg) translate(-38px,38px);
+  }
+  
   /* RESPONSIVE */
+@media only screen and (max-width:1050px) {
+  .hero-section{
+    background-position: calc(50% + 650px) 10px;
+  }
+  .sitenav-item:not(:first-child){
+    margin-left: 20px;
+  }
 
+}
+@media only screen and (max-width:920px) {
+  .hero-section{
+    background-image:none;
+    text-align: center;
+  }
+  .hero-section__info{
+    width: 100%;
+    margin-right: 0 !important;
+  }
+  .hero-section__btn{
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .services-info,
+  .news-info,
+  .testimonial__title-wrapper{
+    max-width: 800px;
+  }
+  
+}
+@media only screen and (max-width:800px) {
+  .site-header__container{
+    align-items: flex-start;
+  }
+  .sitenav-list{
+    flex-wrap: wrap;
+    
+  }
+  .sitenav-item{
+    margin-bottom: 20px;
+  }
+  .services-info,
+  .news-info,
+  .testimonial__title-wrapper{
+    max-width: 700px;
+  }
+}
+@media only screen and (max-width:723px) {
+  .services-info,
+  .news-info,
+  .testimonial__title-wrapper{
+    max-width: 600px;
+  }
+}
+@media only screen and (max-width:723px) {
+  .services-info,
+  .news-info,
+  .testimonial__title-wrapper{
+    max-width: 500px;
+  }
+}
+@media only screen and (max-width:500px){
+  .logo-link{
+    margin-left: auto;
+    margin-right: auto;
+  }
+   .menu-btn{
+     padding-right: 20px;
+     display: block;
+     top: 30px;
+     left: 20px;
+     z-index: 99;
+   }
+   .sitenav{
+    transform: translateX(-400px);
+     height: 100vh;
+     padding: 20px;
+     border-radius: 10px;
+     position: absolute;
+     width: 70%;
+     background-color: rgba(59, 54, 54, 0.9);
+     transition:all ease 0.4s;
+   }
+   .sitenav-list{
+     margin-top: 80px;
+    flex-direction: column;
+    align-items: start !important;
+   }
+   .sitenav-item{
+     margin-left: 0 !important;
+   }
+   .sitenav-link{
+     color: #fff;
+   }
+   .active{
+     transform: translateX(0);
+   }
+   .slide-image{
+     margin-left: 60px !important;
+   }
+   .slide-image img{
+     margin-bottom: 30px !important;
+   }
+   .services-info{
+     max-width: 370px;
+     margin-left: auto;
+     margin-right: auto;
+   }
+   .card-item{
+     margin-right: 0 !important;
+   }
+   .news-info{
+     max-width: 370px;
+     margin-left: auto;
+     margin-right: auto;
+   }
+   .card-list{
+     margin-bottom: 100px !important;
+   }
+   .card{
+     margin-right: 0 !important;
+     margin-bottom: 40px;
+   }
+   .events-cards{
+     flex-direction: column;
+   }
+   .event-card{
+     max-width: 370px;
+     margin-right: 0 !important;
+   }
+ 
+   .country-item{
+     max-width: 370px;
+     margin-left: 40px;
+   }
+   .testimonial__title-wrapper{
+     max-width: 370px;
+   }
+   .testimonial__item{
+     max-width: 370px;
+     margin-right: 0 !important;
+     margin-left: 40px;
+   }
+   .dream__container{
+     flex-direction: column;
+     text-align: center;
+   }
+   .dream-title{
+     margin-bottom: 40px;
+   }
+   .site-footer__container{
+    flex-direction: column;
+    text-align: center;
+   }
+   .site-footer__info{
+     margin-right: 0;
+   }
+   .footer-logo-link img{
+     margin-left: 80px;
+   }
+   .site-footer__list{
+     margin-right: 0 !important;
+   }
+   .footer-links{
+     margin-top: 20px !important;
+   }
+   .card-link::after{
+     margin-left: 5px;
+   }
+   
+   
+}
+@media only screen and (max-width:723px){
+  .services-info,
+  .news-info,
+  .testimonial__title-wrapper{
+    max-width: 300px;
+  }
+}
